Reverted to general cases for domains, and added more error checking.

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,8 @@
   "version": "1.0",
   "description": "Redirects RS Wikia requests to RS Wiki",
   "permissions": ["webRequest", "webRequestBlocking",
-                  "*://2007.runescape.wikia.com/*",
-                  "*://runescape.wikia.com/*",
-                  "*://oldschoolrunescape.wikia.com/*"],
+                  "*://oldschoolrunescape.wikia.com/*",
+                  "*://runescape.wikia.com/*"],
   
   "background": {
     "scripts": ["background.js"]
