--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,19 @@
   "author": "proEndreeper",
   "version": "1.1",
   "description": "Redirects RS Wikia requests to RS Wiki",
-  "permissions": ["webRequest", "webRequestBlocking",
+  "permissions": ["webRequest", "webRequestBlocking", "storage",
                   "*://oldschoolrunescape.wikia.com/*",
                   "*://runescape.wikia.com/*"],
   
   "background": {
     "scripts": ["background.js"],
     "persistent": true
+  },
+  
+  "browser_action": {
+    "default_icon": "icon32.png",
+    "default_title": "RS Wiki Redirector",
+    "default_popup": "popup.html"
   },
 
   "icons":{
