--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
   "name": "RS Wiki Redirector",
   "author": "proEndreeper",
-  "version": "1.1.1",
-  "description": "Redirects RS Wikia requests to RS Wiki",
+  "version": "1.2.0",
+  "description": "Redirects RS Wikia/Fandom requests to RS Wiki",
   "permissions": ["webRequest", "webRequestBlocking", "storage",
                   "*://oldschoolrunescape.wikia.com/*",
-                  "*://runescape.wikia.com/*"],
+                  "*://runescape.wikia.com/*",
+                  "*://oldschoolrunescape.fandom.com/*",
+                  "*://runescape.fandom.com/*"],
   
   "background": {
     "scripts": ["background.js"],
