--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,19 @@
 {
   "name": "RS Wiki Redirector",
   "author": "proEndreeper",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Redirects RS Wikia/Fandom requests to RS Wiki",
   "permissions": ["webRequest", "webRequestBlocking", "storage",
                   "*://oldschoolrunescape.wikia.com/*",
                   "*://runescape.wikia.com/*",
                   "*://oldschoolrunescape.fandom.com/*",
                   "*://runescape.fandom.com/*"],
+
+  "applications": {
+    "gecko" : {
+      "id": "{c3cc188f-ea35-4519-a09c-72e8f06b5d11}"
+    }
+  },
   
   "background": {
     "scripts": ["background.js"],
