Fixed issue with cached results not redirecting to new wiki.
Extension now redirects before navigation requests instead of before web requests.

Signed-off-by: proEndreeper <devon.schneider+gpg@outlook.com>

--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,13 @@
   "author": "proEndreeper",
   "version": "1.2.1",
   "description": "Redirects RS Wikia/Fandom requests to RS Wiki",
-  "permissions": ["webRequest", "webRequestBlocking", "storage",
+  "permissions": ["storage",
                   "*://oldschoolrunescape.wikia.com/*",
                   "*://runescape.wikia.com/*",
                   "*://oldschoolrunescape.fandom.com/*",
-                  "*://runescape.fandom.com/*"],
+                  "*://runescape.fandom.com/*",
+                  "webNavigation",
+                  "tabs"],
 
   "applications": {
     "gecko" : {
