--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,10 @@
                   "*://oldschoolrunescape.wikia.com/*",
                   "*://runescape.wikia.com/*",
                   "*://oldschoolrunescape.fandom.com/*",
-<<<<<<< master
-                  "*://runescape.fandom.com/*"
-                ],
-=======
                   "*://runescape.fandom.com/*",
                   "webNavigation",
-                  "tabs"],
->>>>>>> master
+                  "tabs"
+                 ],
 
   "applications": {
     "gecko" : {
@@ -35,7 +31,7 @@
 
   "content_scripts": [
     {
-      "matches": ["*://*.google.com/*"],
+      "matches": ["*://*.google.*/*"],
       "js": ["searchFilter.js"],
       "run_at": "document_end"
     }
