--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,36 @@
 
   "content_scripts": [
     {
-      "matches": ["*://*.google.*/*"],
+      "matches": [
+                  "https://www.google.com/*",
+                  "https://www.google.co.jp/*",
+                  "https://www.google.co.uk/*",
+                  "https://www.google.es/*",
+                  "https://www.google.ca/*",
+                  "https://www.google.de/*",
+                  "https://www.google.it/*",
+                  "https://www.google.fr/*",
+                  "https://www.google.com.au/*",
+                  "https://www.google.com.tw/*",
+                  "https://www.google.nl/*",
+                  "https://www.google.com.br/*",
+                  "https://www.google.com.tr/*",
+                  "https://www.google.be/*",
+                  "https://www.google.com.gr/*",
+                  "https://www.google.co.in/*",
+                  "https://www.google.com.mx/*",
+                  "https://www.google.dk/*",
+                  "https://www.google.com.ar/*",
+                  "https://www.google.ch/*",
+                  "https://www.google.cl/*",
+                  "https://www.google.at/*",
+                  "https://www.google.co.kr/*",
+                  "https://www.google.ie/*",
+                  "https://www.google.com.co/*",
+                  "https://www.google.pl/*",
+                  "https://www.google.pt/*",
+                  "https://www.google.com.pk/*"
+                ],
       "js": ["searchFilter.js"],
       "run_at": "document_end"
     }
