--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "RS Wiki Redirector",
   "author": "proEndreeper",
-  "version": "1.3.0",
-  "description": "Redirects RS Wikia/Fandom requests to RS Wiki",
+  "version": "1.4.0",
+  "description": "Redirects RS Wikia/Fandom requests to RS Wiki, as well as removes RS Wikia/Fandom search results from Google.",
   "permissions": ["storage",
                   "*://oldschoolrunescape.wikia.com/*",
                   "*://runescape.wikia.com/*",
