Support runescapeclassic.fandom.com -> classic.runescape.wiki and runescape.fandom.com/pt/ -> pt.runescape.wiki

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
                   "*://runescape.wikia.com/*",
                   "*://oldschoolrunescape.fandom.com/*",
                   "*://runescape.fandom.com/*",
+                  "*://runescapeclassic.fandom.com/*",
                   "webNavigation",
                   "tabs"
                  ],
